# Aimware

./: .gitignore  CMakeLists.txt  MyAimbotESP.vcxproj  MyAimbotESP.vcxproj.filters  csgo.h  dllmain.cpp  drawing.cpp  drawing.h  dx.cpp  dx.h  endscene.cpp  entity.h  gui.cpp  gui.h  hack.cpp  hack.h  hash.h  hook.cpp  hook.h  hook_d3d.cpp  includes.h  memory.cpp  memory.h  netvar.cpp  netvar.h  sdk.h  utils.h  vector.cpp  vector.h
minhook/: CMakeLists.txt
public/: x86RetSpoof.h
sdk/: client_class.h  cliententitylist.h  consts.h  enginetrace.h  in_buttons.h  usercmd.h
